refactor: update api base path and database name
Update the API base path from '/onchain_multichain/api' to '/api' to simplify the endpoint. Change database name from 'onchainc_db' to 'onchainc_onchainbills' to better reflect its purpose.

--- a/dex/index.html
+++ b/dex/index.html
@@ -1109,7 +1109,7 @@
     // DOM utility functions
     const $ = (s) => document.querySelector(s);
     const $$ = (s) => document.querySelectorAll(s);
-    const apiBase = '/onchain_multichain/api';
+    const apiBase = '/api';
 
     // Web3Onboard removed; using custom wallet dropdown and EIP-1193 providers
 
